--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ MUSIC_SHARE_WORDPRESS_MOUNT=/mnt/data/inethi-music-share/wordpress
 MUSIC_SHARE_WORDPRESS_MOUNT_INI_FILE=/mnt/data/inethi-music-share/wordpress/wp-content/customscripts/upload.ini
 MUSIC_SHARE_WORDPRESS_MOUNT_CONTENT_FOLDER=/mnt/data/inethi-music-share/wordpress/wp-content
 MUSIC_SHARE_MARIADB_MOUNT=/mnt/data/inethi-music-share/mariadb
+NETWORK_PARENT=eth0
+SUBNET=10.2.0.0/16
+GATEWAY=10.2.0.1
