Added traefik to compose files and updated variables

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+API_RULE=Host(`musicshare.api.internal.local`)
+API_ENTRYPOINT=web
+WORDPRESS_RULE=Host(`musicshare.internal.local`)
+WORDPRESS_ENTRYPOINT=web
+MARIADB_RULE=Host(`mariadb.internal.local`)
+MARIADB_ENTRYPOINT=web
+ADMINER_RULE=Host(`adminer.internal.local`)
+ADMINER_ENTRYPOINT=web
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_TABLE_PREFIX=wp_
 WORDPRESS_DB_HOST=inethi-musicshare-mariadb
@@ -15,3 +23,4 @@ MUSIC_SHARE_MARIADB_MOUNT=/mnt/data/inethi-music-share/mariadb
 NETWORK_PARENT=eth0
 SUBNET=10.2.0.0/16
 GATEWAY=10.2.0.1
+INETHI_NETWORK=web
