--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,28 +1,30 @@
-certifi==2020.12.5
+certifi==2021.5.30
 chardet==4.0.0
-click==7.1.2
+click==8.0.1
 colorama==0.4.4
-cors==0.9.7
+cors==1.0.1
 filelock==3.0.12
-Flask==1.1.2
-Flask-Cors==3.0.9
+Flask==2.0.1
+Flask-Cors==3.0.10
 future==0.18.2
-gevent==20.12.1
-greenlet==0.4.17
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-mariadb==1.0.5
-MarkupSafe==1.1.1
+gevent==21.8.0
+greenlet==1.1.1
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+mariadb==1.0.7
+MarkupSafe==2.0.1
 ordereddict==1.1
 passlib==1.7.4
-pytz==2020.5
-requests==2.25.1
+pytz==2021.1
+requests==2.26.0
 requests-file==1.5.1
-six==1.15.0
-tldextract==3.1.0
-urllib3==1.26.2
-Werkzeug==1.0.1
-WooCommerce==2.1.1
+six==1.16.0
+tldextract==3.1.2
+urllib3==1.26.6
+Werkzeug==2.0.1
+WooCommerce==3.0.0
 zope.event==4.5.0
-zope.interface==5.2.0
+zope.interface==5.4.0
+
+python-dotenv~=0.19.0
