--- a/.env
+++ b/.env
@@ -1,26 +1,15 @@
-API_RULE=Host(`musicshare.api.internal.local`)
-API_ENTRYPOINT=web
-WORDPRESS_RULE=Host(`musicshare.internal.local`)
-WORDPRESS_ENTRYPOINT=web
-MARIADB_RULE=Host(`mariadb.internal.local`)
-MARIADB_ENTRYPOINT=web
-ADMINER_RULE=Host(`adminer.internal.local`)
-ADMINER_ENTRYPOINT=web
+TRAEFIK_API_RULE_MUSICSHARE=musicshare.inethihome.net
+TRAEFIK_API_RULE_MUSICSHARE_API=api.musicshare.inethihome.net
+TRAEFIK_API_RULE_MARIADB=musicshare.mariadb.inethihome.net
+TRAEFIK_API_RULE_ADMINER=musicshare.adminer.inethihome.net
+TRAEFIK_ENTRYPOINT=web
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_TABLE_PREFIX=wp_
 WORDPRESS_DB_HOST=inethi-musicshare-mariadb
 WORDPRESS_DB_USER=root
-WORDPRESS_DB_PASSWORD=inethimusic2020
-MUSIC_SHARE_MARIADB_IPV4=10.2.1.39
-MUSIC_SHARE_WORDPRESS_IPV4=10.2.1.40
-MUSIC_SHARE_API_IPV4=10.2.1.41
-MUSIC_SHARE_ADMINER_IPV4=10.2.1.42
-BRIDGE_NETWORK=inethi-bridge
+WORDPRESS_DB_PASSWORD=password
 MUSIC_SHARE_WORDPRESS_MOUNT=/mnt/data/inethi-music-share/wordpress
-MUSIC_SHARE_WORDPRESS_MOUNT_INI_FILE=/mnt/data/inethi-music-share/wordpress/wp-content/customscripts/upload.ini
+MUSIC_SHARE_WORDPRESS_MOUNT_INI_FILE=/mnt/data/inethi-music-share/wordpress/wp-content/customscripts/config/upload.ini
 MUSIC_SHARE_WORDPRESS_MOUNT_CONTENT_FOLDER=/mnt/data/inethi-music-share/wordpress/wp-content
 MUSIC_SHARE_MARIADB_MOUNT=/mnt/data/inethi-music-share/mariadb
-NETWORK_PARENT=eth0
-SUBNET=10.2.0.0/16
-GATEWAY=10.2.0.1
-INETHI_NETWORK=web
+INETHI_NETWORK=inethi-bridge-traefik
